--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 <button id="search">Click</button>
 <a href='https://en.wikipedia.org/wiki/Wikipedia:Random'>Random article</a>
 <h1 id="alert"></h1>
-<ol id="myList">
+<ol id="myList" class="numbers-fancy" style="--start:0">
   
 </ol>
     <script
