Styled search bar

--- a/app.html
+++ b/app.html
@@ -11,9 +11,11 @@
     </head>
 
     <body>
-      <input id="toSearch" type="text"></input>
+      <div class="searchBox">
+<input id="toSearch" type="text"></input>
 <button id="search">Click</button>
-<a href='https://en.wikipedia.org/wiki/Wikipedia:Random'>Random article</a>
+<a id="random" href='https://en.wikipedia.org/wiki/Wikipedia:Random'>Random article</a>
+</div>
 <h1 id="alert"></h1>
 <ol id="myList" class="numbers-fancy" style="--start:0">
   
